--- a/clusters/overlays/sandbox-cluster/argocd/manager/cluster-config-manager-app.yaml
+++ b/clusters/overlays/sandbox-cluster/argocd/manager/cluster-config-manager-app.yaml
@@ -12,7 +12,7 @@ spec:
   source:
     path: clusters/overlays/sanbox-cluster/argocd/apps
     repoURL: https://github.com/sampop3/gitops-demo.git
-    targetRevision: master
+    targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
