--- a/manifests/configs/openshift-servicemesh-operator/base/servicemesh-operator-subscription.yaml
+++ b/manifests/configs/openshift-servicemesh-operator/base/servicemesh-operator-subscription.yaml
@@ -12,4 +12,4 @@ spec:
   name: servicemeshoperator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: servicemeshoperator.v2.1.0
+  startingCSV: servicemeshoperator.v2.1.2-1
