--- a/manifests/configs/jaeger-operator/base/jaeger-subscription.yaml
+++ b/manifests/configs/jaeger-operator/base/jaeger-subscription.yaml
@@ -12,4 +12,4 @@ spec:
   name: jaeger-product
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: jaeger-operator.v1.34.1
+  startingCSV: jaeger-operator.1.34.1
