--- a/manifests/configs/kiali-operator/base/kiali-operator-subscription.yaml
+++ b/manifests/configs/kiali-operator/base/kiali-operator-subscription.yaml
@@ -12,4 +12,4 @@ spec:
   name: kiali-ossm
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: kiali-operator.v1.36.9
+  startingCSV: kiali-operator.1.36.9
