--- a/manifests/configs/openshift-default-project-template/templates/template.yaml
+++ b/manifests/configs/openshift-default-project-template/templates/template.yaml
@@ -26,5 +26,5 @@ objects:
   subjects:
   - apiGroup: rbac.authorization.k8s.io
     kind: User
-    name: ${PROJECT_ADMIN_USER}
+    name: admin
 {{ end }}
