--- a/manifests/configs/openshift-pipelines/base/subscription.yaml
+++ b/manifests/configs/openshift-pipelines/base/subscription.yaml
@@ -12,4 +12,4 @@ spec:
   name: openshift-pipelines-operator-rh
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: redhat-openshift-pipelines.v1.7.0
+  startingCSV: redhat-openshift-pipelines.1.7.0
