--- a/manifests/configs/jaeger-operator/base/jaeger-subscription.yaml
+++ b/manifests/configs/jaeger-operator/base/jaeger-subscription.yaml
@@ -8,8 +8,7 @@ metadata:
       argocd.argoproj.io/sync-wave: "15"
 spec:
   channel: stable
-  installPlanApproval: Manual
+  installPlanApproval: Automatic
   name: jaeger-product
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: jaeger-operator.v1.34.1
