--- a/manifests/configs/openshift-pipelines/base/subscription.yaml
+++ b/manifests/configs/openshift-pipelines/base/subscription.yaml
@@ -8,8 +8,7 @@ metadata:
       argocd.argoproj.io/sync-wave: "15"
 spec:
   channel: stable
-  installPlanApproval: Manual
+  installPlanApproval: Automatic
   name: openshift-pipelines-operator-rh
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: openshift-pipelines-operator-rh.v1.7.0
