--- a/manifests/argocd/apps/prune-tekton-pipelineruns-job/base/prune-tekton-pipelineruns-job-app.yaml
+++ b/manifests/argocd/apps/prune-tekton-pipelineruns-job/base/prune-tekton-pipelineruns-job-app.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   destination:
     server: https://kubernetes.default.svc
-  project: infra-jobs
+  project: default
   source:
     path: manifests/configs/openshift-prune-tekton-pipelinerun-job
     repoURL: https://github.com/sampop3/gitops-demo.git
