--- a/manifests/configs/elasticsearch-operator/base/elasticsearch-subscription.yaml
+++ b/manifests/configs/elasticsearch-operator/base/elasticsearch-subscription.yaml
@@ -12,4 +12,4 @@ spec:
   name: elasticsearch-operator
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: elasticsearch-operator.5.4.1-24
+  startingCSV: elasticsearch-operator.5.4.2
